create section and add to section blueprint

--- a/src/clipboard/templates/clipboard/index.html
+++ b/src/clipboard/templates/clipboard/index.html
@@ -4,10 +4,11 @@
 
     <div class="sections-container">
         <h1>Clipper</h1>
+        <button id="create-section">Create</button>
         <div class="default-clipboard">
             <div class="header">
                 <h1>Default</h1>
-                <button id="add-clipboard" data-section="1">+</button>
+                <button class="add-clipboard" data-section="1">+</button>
             </div>
             <div class="body">
 
