--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -19,18 +19,27 @@ body {
   font-size: 20px;
   cursor: pointer;
   border-radius: 10px;
+  margin-bottom: 10px;
 }
 
-.clipboard .header h4 {
+.clipboard .header button {
     text-overflow: ellipsis !important;
   overflow-x: hidden !important;
   overflow-y: auto;
   white-space: nowrap !important;
-  padding: 10px;
+  background-color: transparent;
+  border: none;
+  color: var(--body-color);
+  font-size: 20px;
+  cursor: pointer;
   border-radius: 10px;
+  width: 100%;
+  text-align: left;
+  padding: 10px;
 }
 
-.clipboard .header h4:hover {
+
+.clipboard .header button:hover {
   background-color: var(--crimson);
 }
 
@@ -45,7 +54,7 @@ body {
   width: 250px;
   height: 100%;
   overflow-y: auto;
-  padding: 20px;
+  padding: 15px;
   background-color: var(--blue-color);
   color: var(--body-color);
 }
