section clipboards and add button

--- a/src/clipboard/templates/clipboard/index.html
+++ b/src/clipboard/templates/clipboard/index.html
@@ -24,7 +24,23 @@
   </div>
   {% endfor %}
 </div>
-
+<div class="section-clipboard" id="section-clipboard">
+  <div class="add-current-clipboard-container">
+  <button class="add-current-clipboard">Add Current Clipboard</button>
+  </div>
+  <div class="clipboar-container">
+    <div class="header">www</div>
+    <div class="body">xxx</div>
+  </div>
+  <div class="clipboar-container">
+    <div class="header">www</div>
+    <div class="body">xxx</div>
+  </div>
+  <div class="clipboar-container">
+    <div class="header">www</div>
+    <div class="body">xxx</div>
+  </div>
+</div>
 {% load static %}
 <script src="{% static 'scripts/add.js' %}"></script>
 {% endblock %}
