--- a/src/clipboard/templates/clipboard/index.html
+++ b/src/clipboard/templates/clipboard/index.html
@@ -16,10 +16,10 @@
       <button>Clipboard</button>
     </div>
   </div>
-  {% for clipboard in clipboards %}
+  {% for section in sections %}
   <div class="created-clipboard clipboard">
     <div class="header">
-      <button data-section="{{clipboard.section}}">{{clipboard.section}}</button>
+      <button data-section="{{section.id}}">{{section.section}}</button>
     </div>
   </div>
   {% endfor %}
@@ -28,19 +28,15 @@
   <div class="add-current-clipboard-container">
   <button class="add-current-clipboard">Add Current Clipboard</button>
   </div>
-  <div class="clipboar-container">
+  {% for clipboar in clipboards %}
+  <div class="clipboar-container" data-clipboard="{{clipboar.key}}">
     <div class="header">www</div>
     <div class="body">xxx</div>
   </div>
-  <div class="clipboar-container">
-    <div class="header">www</div>
-    <div class="body">xxx</div>
-  </div>
-  <div class="clipboar-container">
-    <div class="header">www</div>
-    <div class="body">xxx</div>
-  </div>
+  {% endfor %}
+
 </div>
 {% load static %}
 <script src="{% static 'scripts/add.js' %}"></script>
+<!-- <script src="{% static 'scripts/get.js' %}"></script> -->
 {% endblock %}
