--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -93,7 +93,7 @@ body {
   margin-left: 300px;
 }
 
-.clipboar-container {
+.clipboard-container {
   box-shadow: 0px 0px 10px #888888;
   margin-bottom: 20px;
   border-radius: 10px;
@@ -102,7 +102,7 @@ body {
   
 }
 
-.clipboar-container .header {
+.clipboard-container .header {
   background-color: var(--blue-color);
   padding: 5px;
   font-size: 25px;
@@ -112,7 +112,7 @@ body {
 
 }
 
-.clipboar-container .body {
+.clipboard-container .body {
   padding: 10px;
 
 }
