--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -43,6 +43,11 @@ body {
   background-color: var(--crimson);
 }
 
+.selected {
+  background-color: var(--crimson);
+border-radius: 10px;
+}
+
 .sections-container .header {
   display: block;
 }
@@ -97,7 +102,7 @@ body {
   box-shadow: 0px 0px 10px #888888;
   margin-bottom: 20px;
   border-radius: 10px;
-  cursor: pointer;
+  /* cursor: pointer; */
   margin-top: 20px;
   
 }
@@ -136,4 +141,25 @@ body {
 .add-current-clipboard:hover {
   background-color: var(--crimson);
   transition: .3s;
+}
+
+pre {
+  margin-top: 0px;
+  white-space: break-spaces;
+  font-size: 20px;
+}
+
+.clipboard-actions {
+  text-align: right;
+  padding: 15px;
+}
+
+.clipboard-actions button {
+  background-color: var(--crimson);
+  color: var(--body-color);
+  padding: 7px;
+  border-radius: 10px;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
 }
