--- a/src/clipboard/templates/clipboard/index.html
+++ b/src/clipboard/templates/clipboard/index.html
@@ -26,7 +26,8 @@
 </div>
 <div class="section-clipboard" id="section-clipboard">
   <div class="add-current-clipboard-container">
-  <button class="add-current-clipboard" id="add-clipboard-button">Add Current Clipboard</button>
+  <button class="section-button" id="add-clipboard-button">Add Current Clipboard</button>
+  <button class="section-button" id="delete-section">Delete</button>
   </div>
   <div id="clipboards-container">
   {% for clipboard in clipboards %}
