--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -125,7 +125,7 @@ border-radius: 10px;
 
 }
 
-.section-button {
+.selected-section-button {
   width: 47%;
   border-radius: 10px;
   border: none;
